--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "formik": "^2.4.9",
     "next": "16.0.3",
+    "next-auth": "^4.24.13",
     "nextjs-toast-notify": "^1.57.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
