--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.4",
     "cloudinary": "^2.9.0",
     "formik": "^2.4.9",
+    "jwt-decode": "^4.0.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.5",
