--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, ".next/types/app/dashboard/orders/page.tsx"  ],
   "exclude": ["node_modules"]
 }
