--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nextjs-toast-notify": "^1.57.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "socket.io-client": "^4.8.3",
     "stripe": "^20.3.1",
     "yup": "^1.7.1"
   },
